kuberenetes-manifests/apibuilder-vs-dev.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: apibuilder-dev
  namespace: dev
spec:
  gateways:
  - apiwiz-system/apiwiz-gateway
  hosts:
  - apiwiz.io
  - varun-apibuilder.com
  - builder-test.ICIC.com
  - builder-test.ICIC.com
  - builder-test.ICIC.com
  - icici.com
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: apibuilder-agent
        port:
          number: 8000
